# opencv-by-example

02_intro_to_basics/01_read_write_images/: CMakeLists.txt  main.cpp
02_intro_to_basics/02_read_video/: CMakeLists.txt  main.cpp
02_intro_to_basics/03_writing_to_file_storage/: CMakeLists.txt  main.cpp
03_learning_the_gui_and_basic_filtering/01_basic_gui/: CMakeLists.txt  main.cpp
03_learning_the_gui_and_basic_filtering/02_add_mouse_events/: CMakeLists.txt  main.cpp
03_learning_the_gui_and_basic_filtering/03_adding_buttons/: CMakeLists.txt  main.cpp
04_histograms_and_filters/01_create_user_interface/: CMakeLists.txt  main.cpp
05_06_automated_optical_inspection/01_application_for_aoi/: CMakeLists.txt  main.cpp
